Current:
Ryan C. Gordon (icculus.org) - Wed May 18 11:40:10 EDT 2005
 * Added appbundleid and appbundledesc to setup.xml install tag (MacOS only).
Ryan C. Gordon (icculus.org) - Tue May 17 12:21:23 EDT 2005
 * Added .rar archive plugin.
Ryan C. Gordon (icculus.org) - Sat Nov 20 08:42:16 EST 2004
 * Minor carbon_ui tweaks and corrections to update function.
Ludwig Nussel - Wed Nov 10 14:21:21 PST 2004
 * Added support for inline binary scripts.
Ludwig Nussel - Mon Nov  1 19:39:21 PST 2004
 * New 'suffix' attribute to the files element to force plugins to be used.
 * Fixes in ZIP plugin
 * New 'productdir' attribute for meta-installers to change the directory
   before executing the new installer.
 * GTK UI updates for clarification
Ludwig Nussel - Mon Sep 20 18:09:29 PDT 2004
 * Added feature attribute for 'require' tags.
 * No longer write log to /tmp/uninstall.log when uninstalling.
Stephane Peter (Codehost) - Tue Aug  3 19:32:48 PDT 2004
 * Added 'args' attribute for binary tags.
Ryan C. Gordon (icculus.org) - Thu May 27 12:39:23 EDT 2004
 * Carbon UI now handles Apple-Q quit hotkey at end of installation correctly.
Ryan C. Gordon (icculus.org) - Thu 20 May 06:05:23 EDT 2004
 * Carbon UI no longer blocks installation while README is showing.
Rob Crittenden - Fri Apr  9 18:03:22 PDT 2004
 * Allow scripts to require CDs and specify a size.
Ryan C. Gordon (Epic Games) - Thu Apr  8 17:57:37 EDT 2004
 * Mac version deals with the default install path ("/Applications") not
   existing. Used to crash in this case.
 * Several fixes to Mac version to treat strings as Latin1, which lets us
   localize European languages that use high-ascii chars. Long way to go to
   support full Unicode, though.
Ryan C. Gordon (Epic Games) - Fri Apr  2 00:00:51 EST 2004
 * Check for "cd9660" file systems so FreeBSD with binary compat layer works.
Ryan C. Gordon (Epic Games) - Wed Mar 31 11:30:47 EST 2004
 * Allow one hardcoded translation instead of using external .po files.